# SCALE

./: CMakeLists.txt  README.md  d_ppNormVector.c  d_thMul.c  finitoGW.cpp  finitoMain.cpp  getGWMatrix.cpp  getSingleMatrix.cpp
Docs/: Scaling.bib  ieeetr_noq.bst  scaling_with_proof.tex
FINITO/: CMakeLists.txt  README.md  d_ppNormVector.cpp  d_thMul.cpp  finito.c  finito.cpp  finitoMain.cpp  getSingleMatrix.cpp  main.cpp
FINITO/include/scale/: scale.hpp
Old/: RUBalance.c  RUBalance1.c  SKBalance.c  SKBalance1.c  SKFilter.c  adaScaleDiag.c  adaptiveScale.c  adaptiveScaleNew.c  adaptiveScaleTesting.c  adaptiveScaleValues.c  addScale.c  bal.c  bal1.c  bal2.c  bal3.c  balGW.cpp  balGW1.cpp  balMain.c  balMain2.c  balMain3.c  balanceSingle.cpp  balanceSingleAdaDiag.cpp  balanceSingleAdaptive.cpp  bestHicScale.c  check.cpp  checkSize.cpp  chr9_Scale.c  createNormVector.cpp  createNormVector.cpp.orig  createNormVectorINRER_ONLY.cpp  createNormVectorIntra.cpp  createNormVectorIntraSingle.cpp  createNormVectorIntraSingle1.cpp  createNormVector_INTER_ONLY.cpp  createNormVector_new.cpp  d_RUBalance.c  d_SKBalance.c  d_SKBalance1.c  d_SKBalance2.c  d_SKBalance3.c  (+79 more)
Utils/: getRowSums.cpp  mapInfo.cpp
